# Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/SDL2/Headers/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl_glext.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_quit.h  SDL_rect.h  SDL_render.h  SDL_revision.h  SDL_rwops.h  SDL_scancode.h  SDL_sensor.h  (+25 more)
include/SDL_Image/Headers/: SDL_image.h
src/: Macros.h  main.cpp
src/SDL/: Window.cpp  Window.h
src/board/: Board.cpp  Board.h  Square.h
src/core/: Game.cpp  Game.h
src/game/: GameLoop.cpp  GameLoop.h
src/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/sdl/: SpriteManager.h  Window.cpp  Window.h
